# P2507-SVM-on-tree

./: .gitignore  CITATION.cff  LICENSE  README.md  benchmark_sklearn_datasets.py  benchmark_svm_tree_vs_svc_2n.py  plot_benchmark_results.py  plot_lambda_analysis.py  requirements.txt  setup.py
latex/: .gitignore  .latexmkrc  main.tex
latex/data/: meta.tex  tools.tex
latex/docs/: SVM-classical-verLe.tex  SVM-classical.tex  SVM-on-tree.tex  experiment.tex  greedy-expansion-lambda.tex  intro.tex  lambda_analysis.tex  x-notes.tex
latex/docs/old/: SVM-classical-verHuan.tex  SVM-on-tree-backup.tex  SVM-on-tree-verHuan.tex  SVM-on-tree-verLe.tex
plots/: results.csv
python/: README.md  benchmark_svm_tree_vs_svc_2n.py  complete_benchmark.py  mnist_svm_on_tree_ovo.py  plot_benchmark_results_updated.py  plot_from_log.py  pyproject.toml  setup.py  svm_on_tree.py
python/any_lambda/: benchmark_svm_tree_vs_svc_2n.py  compare_lambda_results.py  complete_benchmark.py  main.py  plot_lambda_analysis.py  pyproject.toml  requirements.txt  run_benchmark.sh  run_benchmark_2n.sh  setup.py  svm_on_tree.py
python/any_lambda/src/: svm_on_tree_lambda_any.cpp
python/logs/: run.txt
python/src/: svm_on_tree.cpp
src/: svm_on_tree_lambda_any.cpp
